linux-ezx: sync a1200 and e6 changes with openezx svn, add more RP patches

--- a/packages/linux/linux-ezx-2.6.21/patches/index.html
+++ b/packages/linux/linux-ezx-2.6.21/patches/index.html
@@ -1,9 +1,10 @@
-<html><head><title>Revision 2047: /trunk/src/kernel-2.6/patches</title></head>
+<html><head><title>Revision 2059: /trunk/src/kernel-2.6/patches</title></head>
 <body>
- <h2>Revision 2047: /trunk/src/kernel-2.6/patches</h2>
+ <h2>Revision 2059: /trunk/src/kernel-2.6/patches</h2>
  <ul>
   <li><a href="../">..</a></li>
   <li><a href="Makefile.OpenEZX">Makefile.OpenEZX</a></li>
+  <li><a href="a1200-eoc.patch">a1200-eoc.patch</a></li>
   <li><a href="a1200-mci.patch">a1200-mci.patch</a></li>
   <li><a href="a1200-pcap.patch">a1200-pcap.patch</a></li>
   <li><a href="a1200-ts.patch">a1200-ts.patch</a></li>
@@ -15,6 +16,7 @@
   <li><a href="a780-pcap.patch">a780-pcap.patch</a></li>
   <li><a href="a780-ts.patch">a780-ts.patch</a></li>
   <li><a href="a780-vibrator.patch">a780-vibrator.patch</a></li>
+  <li><a href="asoc-fix-loopback.patch">asoc-fix-loopback.patch</a></li>
   <li><a href="asoc-pxa-ssp.patch">asoc-pxa-ssp.patch</a></li>
   <li><a href="defconfig-a1200">defconfig-a1200</a></li>
   <li><a href="defconfig-a780">defconfig-a780</a></li>
@@ -22,6 +24,10 @@
   <li><a href="defconfig-e6">defconfig-e6</a></li>
   <li><a href="defconfig-e680">defconfig-e680</a></li>
   <li><a href="dmesg-a780.log">dmesg-a780.log</a></li>
+  <li><a href="e6-eoc.patch">e6-eoc.patch</a></li>
+  <li><a href="e6-mci.patch">e6-mci.patch</a></li>
+  <li><a href="e6-pcap.patch">e6-pcap.patch</a></li>
+  <li><a href="e6-ts.patch">e6-ts.patch</a></li>
   <li><a href="e680-emu.patch">e680-emu.patch</a></li>
   <li><a href="e680-kbd.patch">e680-kbd.patch</a></li>
   <li><a href="e680-leds.patch">e680-leds.patch</a></li>
@@ -35,10 +41,13 @@
   <li><a href="ezx-core.patch">ezx-core.patch</a></li>
   <li><a href="ezx-emu.patch">ezx-emu.patch</a></li>
   <li><a href="ezx-enable-stuart.patch">ezx-enable-stuart.patch</a></li>
+  <li><a href="ezx-eoc.patch">ezx-eoc.patch</a></li>
   <li><a href="ezx-mtd-map.patch">ezx-mtd-map.patch</a></li>
   <li><a href="ezx-pcap.patch">ezx-pcap.patch</a></li>
   <li><a href="ezx-pm.patch">ezx-pm.patch</a></li>
   <li><a href="ezx-serial-bug-workaround.patch">ezx-serial-bug-workaround.patch</a></li>
+  <li><a href="i2c-core-fix-a1200.patch">i2c-core-fix-a1200.patch</a></li>
+  <li><a href="mtdfix.patch">mtdfix.patch</a></li>
   <li><a href="mux-fix-init-errorpath.patch">mux-fix-init-errorpath.patch</a></li>
   <li><a href="mux-fix-makefile.patch">mux-fix-makefile.patch</a></li>
   <li><a href="mux-fix-tty-driver.patch">mux-fix-tty-driver.patch</a></li>
@@ -53,6 +62,7 @@
   <li><a href="patch-2.6.21.4">patch-2.6.21.4</a></li>
   <li><a href="pcap-ts.patch">pcap-ts.patch</a></li>
   <li><a href="pxa-kbd.patch">pxa-kbd.patch</a></li>
+  <li><a href="pxa27x-udc-fix-a1200.patch">pxa27x-udc-fix-a1200.patch</a></li>
   <li><a href="pxa27x-udc-support.2.patch">pxa27x-udc-support.2.patch</a></li>
   <li><a href="series">series</a></li>
  </ul>
