linux-ezx: catch up with svn and unbreak booting by enabling ext2

--- a/packages/linux/linux-ezx-2.6.21/patches/index.html
+++ b/packages/linux/linux-ezx-2.6.21/patches/index.html
@@ -1,10 +1,12 @@
-<html><head><title>Revision 2059: /trunk/src/kernel-2.6/patches</title></head>
+<html><head><title>Revision 2064: /trunk/src/kernel-2.6/patches</title></head>
 <body>
- <h2>Revision 2059: /trunk/src/kernel-2.6/patches</h2>
+ <h2>Revision 2064: /trunk/src/kernel-2.6/patches</h2>
  <ul>
   <li><a href="../">..</a></li>
   <li><a href="Makefile.OpenEZX">Makefile.OpenEZX</a></li>
   <li><a href="a1200-eoc.patch">a1200-eoc.patch</a></li>
+  <li><a href="a1200-flip.patch">a1200-flip.patch</a></li>
+  <li><a href="a1200-kbd.patch">a1200-kbd.patch</a></li>
   <li><a href="a1200-mci.patch">a1200-mci.patch</a></li>
   <li><a href="a1200-pcap.patch">a1200-pcap.patch</a></li>
   <li><a href="a1200-ts.patch">a1200-ts.patch</a></li>
@@ -46,7 +48,6 @@
   <li><a href="ezx-pcap.patch">ezx-pcap.patch</a></li>
   <li><a href="ezx-pm.patch">ezx-pm.patch</a></li>
   <li><a href="ezx-serial-bug-workaround.patch">ezx-serial-bug-workaround.patch</a></li>
-  <li><a href="i2c-core-fix-a1200.patch">i2c-core-fix-a1200.patch</a></li>
   <li><a href="mtdfix.patch">mtdfix.patch</a></li>
   <li><a href="mux-fix-init-errorpath.patch">mux-fix-init-errorpath.patch</a></li>
   <li><a href="mux-fix-makefile.patch">mux-fix-makefile.patch</a></li>
@@ -64,6 +65,7 @@
   <li><a href="pxa-kbd.patch">pxa-kbd.patch</a></li>
   <li><a href="pxa27x-udc-fix-a1200.patch">pxa27x-udc-fix-a1200.patch</a></li>
   <li><a href="pxa27x-udc-support.2.patch">pxa27x-udc-support.2.patch</a></li>
+  <li><a href="pxa27x_overlay-r5.patch">pxa27x_overlay-r5.patch</a></li>
   <li><a href="series">series</a></li>
  </ul>
  <hr noshade><em>Powered by <a href="http://subversion.tigris.org/">Subversion</a> version 1.1.4 (r13838).</em>
